--- a/README.org
+++ b/README.org
@@ -1,2 +1,5 @@
 * Web Administration Tool
-A tool for managing personal websites
+A tool for managing personal websites.
+
+* Details
+The tool should allow the user to manage blog posts, website data and finally allow for the integration of more features.
