--- a/README.org
+++ b/README.org
@@ -1,5 +1,7 @@
 * Web Administration Tool
-A tool for managing personal websites.
+A tool for managing your personal website. The following project makes it possible for you to
+manage a blog or even a proejcts section in your website. You can create, edit and delete posts
+with the help of this tool.
 
 * Details
 The tool should allow the user to manage blog posts, website data and finally allow for the integration of more features.
