Replace detail section with demo

--- a/README.org
+++ b/README.org
@@ -1,7 +1,6 @@
 * Web Administration Tool
-A tool for managing your personal website. The following project makes it possible for you to
-manage a blog or even a proejcts section in your website. You can create, edit and delete posts
-with the help of this tool.
+A tool for managing the contents of your website. The following project makes it possible for you to
+manage a blog, a project section or any other form of content. 
 
 ** Dependencies
 The project was made using:
@@ -12,17 +11,18 @@ The project was made using:
 - Apache derby
 - Jasper
 
-* Details
+* Demo
 In order to demo the project just run the main file "WebAdminToolApp" and then use the following
 login information:
 
 - user
 - password
 
-The project put no emphasis on the security of the login authentication as it was outside the 
+No emphasis was put on the security of the login authentication as it was outside the 
 scope of the project. So please make sure you harden the spring security when using this project
 for your own use. 
 
-After login in the website should be fairly stright forward to use and interact with. 
+The demo runs on a local database setup by apache derby, so nothing is stored permanently in your
+demo run. After login the website should be fairly straight forward to use and interact with. 
 
 Please feel free to provide constructive feedback!
