--- a/README.org
+++ b/README.org
@@ -28,6 +28,6 @@ demo run. After login the website should be fairly straight forward to use and i
 ** Final words
 After having to manually manage my own websites content I ended up doing what a developer does best,
 being lazy, so I created this webapp. This particular version is intended for demo purposes, which is 
-why the frontend is using a bootstrap 4 template with minor modifications.  
+why the project has primarily a lot of frontend compontents taken from a bootstrap 4 template.  
 
 Please feel free to provide constructive feedback!
